	- Fix a bug that show twice post list for a given tag
	- Sidebar added
	- Improve doc generation
	- Migrate tools in a "tools" directory
	- Publish command with a script that send result by rsync using SSH
	- 'Read more' function: you can choose how many lines to display for each post
	  on homepage.
	- Search bar added
	- Fix bug on articles that have similar names
	- Add a KNOWN_ISSUE file to give known errors
	- Fix a bug on ` chars
	- Delete some useless variable in Makefile
	- Add charset in RSS
	- Add AUTHOR as a new metadata for each post
	- BLOG_SHORT_DESC is now used as a kind of second title for blog title
	- Limit RSS number with MAX_RSS
	- Add content of post in RSS file
	- Minisch theme improvements: date, escaped_title, labels for each post, etc.
	- Add datetime as new value
	- Add CSS that permit to define a printing version of the weblog (for
	  default theme and minisch theme)
	- Add link to post title on homepage for default theme
	- Fix bug: missing jquery.js on single post page
	- Developer documentation in english and french
	- Add some tools for developer like flushing DB and SRC directories
	- Add new CSS for default theme in black and white (but you have to redefine
	  config.mk file in default theme)
	- Fix bug that appears with sidebar
	- Add a favicon for default theme and minisch theme
	- Add Makefly's logo thanks to ECK Ine
	- Sidebar appears now on about's page
	- Improvements on Makefile when deleting enormously directories like tmp or
	  pub directories. This permit now to create a blog with more than 2000
	  posts.
	- Create a tool that permits to create a lot of post (for testing)
	- Add lua markdown binaries to improve Makefly's generation
	- Add URL on post's title for default theme

Version 0.1 (released 2012-07-17)
	- RSS feed
	- tags
	- permalink
	- possibility to set posting date (using a timestamp)
	- customization using options like max post on homepage
	- translation: English, French
	- static files
	- templates